--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha --recursive --exit"
   },
   "dependencies": {
     "amqplib": "^0.8.0",
     "bcryptjs": "^2.4.3",
+    "chai": "^4.3.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mocha": "^8.4.0",
     "mongoose": "^5.12.10",
     "morgan": "~1.9.1",
     "nodemailer": "^6.6.1"
